Fix font size on mobile

--- a/app/assets/stylesheets/components/_pagination.scss
+++ b/app/assets/stylesheets/components/_pagination.scss
@@ -44,9 +44,11 @@
 
 .pagination__link-title {
   display: block;
-  font-size: 27px;
+  font-size: 20px;
+  line-height: 1.1111;
 
   @media (min-width: 768px) {
+    font-size: 27px;
     line-height: 1.25;
   }
 }
@@ -61,4 +63,6 @@
 .pagination__link-icon {
   display: inline-block;
   margin-bottom: 1px;
+  height: .482em;
+  width: .63em;
 }
